prep for 3.2.1 release